rework configuration to remove possibility of stack overflow exception. generally clean up configuration. add ability to clear all config values set since runtime started. add more exceptions to places we're looking for elements.