@@ -2,6 +2,7 @@ package com.dougnoel.sentinel.configurations;
 
 import static org.junit.Assert.*;
 
+import com.dougnoel.sentinel.strings.SentinelStringUtils;
 import org.junit.After;
 import org.junit.AfterClass;
 import org.junit.BeforeClass;
@@ -12,7 +13,12 @@ import com.dougnoel.sentinel.pages.PageManager;
 import com.dougnoel.sentinel.system.TestManager;
 import com.dougnoel.sentinel.webdrivers.Driver;
 
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+
 public class ConfigurationTests {
+	private static final Path CONFIG_FILE_PATH = Path.of("conf/sentinel.yml");
 	private static String originalEnvironment = null;
 	private static final String ENV = "env";
 	private static final String PROD = "prod";
@@ -43,9 +49,10 @@ public class ConfigurationTests {
 	}
 
 	@AfterClass
-	public static void tearDownAfterAllTestsAreFinished() throws Exception {
+	public static void tearDownAfterAllTestsAreFinished() throws IOException {
 		Configuration.update(ENV, originalEnvironment);
 		Driver.quitAllDrivers();
+		Files.deleteIfExists(CONFIG_FILE_PATH);
 	}
 
 	@Test
@@ -77,7 +84,8 @@ public class ConfigurationTests {
 	public void failToLoadNonExistentPassword() {
 		Configuration.accountInformation(DOESNOTEXIST, PASSWORD);
 	}
-	
+
+	@Test
 	public void getEnvironmentDefault() {
 		Configuration.clear(ENV);
 		assertEquals("Expecting the default env to be set if none is given.", "localhost", Configuration.environment());
@@ -201,5 +209,52 @@ public class ConfigurationTests {
 	@Test(expected = FileException.class)
 	public void failToLoadNonExistentExecutable() {
 		Configuration.executable("TextboxPage");
+	}
+
+	@Test
+	public void clearConfiguration(){
+		Configuration.update(TEST_VALUE, "true");
+		Configuration.clearAllSessionAppProps();
+		assertFalse("Expecting test value to default to false due to being cleared out.", Configuration.toBoolean(TEST_VALUE));
+	}
+
+	@Test
+	public void clearConfigurationDoesNotWipeTimeout(){
+		Configuration.clear("timeout");
+		System.setProperty("timeout", "3");
+		Time.reset();
+		Time.out();
+		Configuration.clearAllSessionAppProps();
+		assertEquals("Expecting timeout to still be 3 after all config values cleared.", Time.out().toSeconds(), 3);
+		Configuration.clear("timeout");
+		System.clearProperty("timeout");
+		Time.reset();
+	}
+
+	@Test
+	public void clearConfigurationDoesNotWipeEnvironment(){
+		Configuration.clear(ENV);
+		System.setProperty(ENV, TEST_VALUE);
+		Configuration.clearAllSessionAppProps();
+		assertEquals(SentinelStringUtils.format("Expecting {} to still be {} after all config values cleared.", ENV, TEST_VALUE), Configuration.environment(), TEST_VALUE);
+		Configuration.clear(ENV);
+		System.clearProperty(ENV);
+	}
+
+	@Test
+	public void clearConfigurationDoesNotWipeDataFromConfigFile() throws IOException {
+		// - if this test fails for you, it might be because the java version you are using is unable to read the config file (java versions past jdk11).
+		//   try adding --add-opens=java.base/java.io=ALL-UNNAMED to your java VM options.
+
+		// - test_value will keep its value from before all config values cleared due to /conf/sentinel.yml file containing 'test_value: 1234' for default env.
+		Files.writeString(CONFIG_FILE_PATH,
+				"---\n" +
+						"configurations:\n" +
+						"  default:\n" +
+						"    test_value: 1234\n" +
+						"...");
+		Configuration.clearAllSessionAppProps();
+		assertEquals(SentinelStringUtils.format("Expecting {} to still be set after all config values cleared.", TEST_VALUE),
+				Configuration.toString(TEST_VALUE), "1234");
 	}
 }
